test/spec_vectors/conversions/fail/module_5.wat
(module (func (result i32) (i32.trunc_f64_u (i64.const 0))))